De-bloating CSS and javascript.

--- a/themes/twentyfourteen/layouts/partials/content.html
+++ b/themes/twentyfourteen/layouts/partials/content.html
@@ -37,4 +37,8 @@
             {{ end }}
 		</span>
 	</footer>
+
+    <div id="comments" class="comments-area">
+        <section id="isso-thread"></section>
+    </div>
 </article> <!-- #post-## -->
