--- a/themes/twentyfourteen/layouts/partials/footer.html
+++ b/themes/twentyfourteen/layouts/partials/footer.html
@@ -9,13 +9,14 @@
                 <a rel="license"
                    href="http://creativecommons.org/licenses/by-sa/4.0/">
                     <img src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"
-                         alt="CC-BY-SA" />
+                         width="80" height="15" alt="CC-BY-SA" />
                 </a>
                 unless otherwise noted.
 			</div><!-- .site-info -->
 		</footer><!-- #colophon -->
 	</div><!-- #page -->
 
+	<link rel='stylesheet' id='twentyfourteen-style-css' href='{{ .Site.BaseURL }}/css/style.css' type='text/css' media='all' />
 	<script type='text/javascript' src='{{ .Site.BaseURL }}/js/functions.js'></script>
 </body>
 </html>
