Move stuff around in page head/foot.
Mostly at the advice of the PageSpeed tool.

--- a/themes/twentyfourteen/layouts/partials/footer.html
+++ b/themes/twentyfourteen/layouts/partials/footer.html
@@ -8,7 +8,7 @@
                 Contents licensed under
                 <a rel="license"
                    href="http://creativecommons.org/licenses/by-sa/4.0/">
-                    <img src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"
+                    <img src="https://licensebuttons.net/l/by-sa/4.0/80x15.png"
                          width="80" height="15" alt="CC-BY-SA" />
                 </a>
                 unless otherwise noted.
@@ -16,7 +16,6 @@
 		</footer><!-- #colophon -->
 	</div><!-- #page -->
 
-	<link rel='stylesheet' id='twentyfourteen-style-css' href='{{ .Site.BaseURL }}/css/style.css' type='text/css' media='all' />
 	<script type='text/javascript' src='{{ .Site.BaseURL }}/js/functions.js'></script>
 </body>
 </html>
