--- a/themes/twentyfourteen/layouts/partials/header.html
+++ b/themes/twentyfourteen/layouts/partials/header.html
@@ -6,26 +6,26 @@
 	<meta name="viewport" content="width=device-width">
 	<title>{{ if .IsPage }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}</title>
 	<link rel="profile" href="http://gmpg.org/xfn/11">
-	{{ "<!--[if lt IE 9]>" | safeHTML }}
-	<script src="{{ .Site.BaseURL }}/js/html5.js"></script>
-	{{ "<![endif]-->" | safeHTML }}
-    
     <link href="{{ .Site.BaseURL }}/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 
-	<link rel='stylesheet' id='twentyfourteen-style-css' href='{{ .Site.BaseURL }}/css/style.css' type='text/css' media='all' />
-	<script defer type='text/javascript' src='{{ .Site.BaseURL }}/js/jquery/jquery.js'></script>
-	<script defer type='text/javascript' src='{{ .Site.BaseURL }}/js/jquery/jquery-migrate.min.js'></script>
-    <script defer type='text/javascript' src='//comments.taricorp.net/js/embed.min.js' data-isso='//comments.taricorp.net/'></script>
-	<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous" />
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
+    <!-- Inline scripts -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             renderMathInElement(document.body);
         });
     </script>
+    
+    <!-- Stylesheets -->
+	<link rel='stylesheet' id='twentyfourteen-style-css' href='{{ .Site.BaseURL }}/css/style.css' type='text/css' media='all' />
+	<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous" />
+
+     <!-- External scripts -->
+	<script defer type='text/javascript' src='{{ .Site.BaseURL }}/js/jquery/jquery.js'></script>
+	<script defer type='text/javascript' src='{{ .Site.BaseURL }}/js/jquery/jquery-migrate.min.js'></script>
+    <script defer type='text/javascript' src='//comments.taricorp.net/js/embed.min.js' data-isso='//comments.taricorp.net/'></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
 </head>
 
 <body class="home blog masthead-fixed list-view full-width grid">
