--- a/themes/twentyfourteen/layouts/partials/searchform.html
+++ b/themes/twentyfourteen/layouts/partials/searchform.html
@@ -1,18 +1,5 @@
-<script type="text/javascript">
-    function site_search(obj) {
-    	var host = window.location.host;
-        obj.q.value = "site:" + host + " " + obj.ss_q.value;
-    }
-</script>
-
-<aside id="search-3" class="widget widget_search">
-	<form role="search" class="search-form" action="//www.google.com/search" method="get" onSubmit="site_search(this)">
-
-	<input name="q" type="hidden" />
-	    <label>
-	        <span class="screen-reader-text">Search for:</span>
-	        <input name="ss_q" type="text" placeholder="Search ..." class="search-field" />
-	    </label>
-	    <input type="submit" value="Search" class="search-submit" />
-	</form>
-</aside>
+<iframe src="https://duckduckgo.com/search.html?site={{ .Site.BaseURL }}&prefill=Search"
+        style="overflow:hidden;margin:0;padding:4px;height:40px;float:right;"
+        name="site-search">
+    <a href="https://duckduckgo.com/?q=site%3A{{ .Site.BaseURL }}">Search on DuckDuckGo</a>
+</iframe>
