resource: ensure we don't insert bad whitespace
Since the resource shortcode is meant to be used in attribute values,
tweak it to ensure it doesn't insert extra whitespace. Whitespace kind
of works, but doesn't seem robust.

--- a/layouts/shortcodes/resource.html
+++ b/layouts/shortcodes/resource.html
@@ -1,4 +1,2 @@
 <!-- Trivial shortcode to get the correct URL for a page resource
-     in a bundle. -->
-{{ $img := $.Page.Resources.GetMatch (.Get 0)}}
-{{ $img.RelPermalink }}
+     in a bundle. -->{{ $img := $.Page.Resources.GetMatch (.Get 0)}}{{ $img.RelPermalink }}
