--- a/assets/tcn.css
+++ b/assets/tcn.css
@@ -61,6 +61,8 @@ table tbody tr:nth-child(even) {
 .attention, .information {
     padding: .5em;
     border-radius: .5rem;
+    margin-top: .5em;
+    margin-bottom: .5em;
 }
 .attention {
     background-color: #fee;
