--- a/assets/tcn.css
+++ b/assets/tcn.css
@@ -70,3 +70,20 @@ table tbody tr:nth-child(even) {
 .information {
     background-color: #eef;
 }
+
+@media (prefers-color-scheme: dark) {
+    /* Code blocks inline their styles, but at least ensure the text is visible */
+    .highlight {
+        color: black;
+    }
+
+    figure {
+        background-color: #333;
+    }
+    .attention {
+        background-color: #631;
+    }
+    .information {
+        background-color: #134;
+    }
+}
