Tell user agents that we implement support for dark color schemes
Not sure if this really does anything versus not using it (`only light`
I can see being useful, but this less so), but it's easy to add so it
can stay.

--- a/assets/tcn.css
+++ b/assets/tcn.css
@@ -71,6 +71,10 @@ table tbody tr:nth-child(even) {
     background-color: #eef;
 }
 
+:root {
+    color-scheme: light dark;
+}
+
 @media (prefers-color-scheme: dark) {
     /* Code blocks inline their styles, but at least ensure the text is visible */
     .highlight {
